# nativeaudio

./: .gitignore  LICENSE  README.md  build.gradle.kts  local.properties  nativeaudio-release.aar  settings.gradle.kts
buildSrc/src/main/java/: dependencies.kt
gradle/wrapper/: gradle-wrapper.properties
iolib/: build.gradle
iolib/src/main/cpp/: CMakeLists.txt
nativeaudio/: build.gradle.kts
nativeaudio/src/androidTest/java/org/albaspazio/nativeaudio/: ExampleInstrumentedTest.kt
nativeaudio/src/main/: AndroidManifest.xml
nativeaudio/src/main/cpp/: CMakeLists.txt  PlaybackEngine.cpp  PlaybackEngine.h  jni_bridge.cpp
nativeaudio/src/main/java/org/albaspazio/nativeaudio/: PlaybackEngine.kt
nativeaudio/src/main/res/values/: colors.xml  strings.xml  styles.xml
nativeaudio/src/test/java/org/albaspazio/nativeaudio/: ExampleUnitTest.kt
parselib/: build.gradle
parselib/src/main/cpp/: CMakeLists.txt
